bug fixed hotel_room_details and hotel_room_pricing api
