# api/swagger.yaml
@@ -2328,10 +2328,10 @@ paths:
         description: A page number within the paginated result set.
         schema:
           type: integer
-      - name: product_hotels
+      - name: product_id
         required: false
         in: query
-        description: product_hotels
+        description: Product Hotel object details
         schema:
           type: string
       responses:
@@ -2473,10 +2473,10 @@ paths:
         description: A page number within the paginated result set.
         schema:
           type: integer
-      - name: product_hotels
+      - name: product_id
         required: false
         in: query
-        description: product_hotels
+        description: Product Hotel Object 
         schema:
           type: string
       responses:
